# hydrogen

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  README_MULTI_PROTOCOL.md  WARP.md  conanfile.py  conanfile.txt  mkdocs.yml  test_abstract.cpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
cmake/: HydrogenUtils.cmake  (+9 more)
src/apps/: CMakeLists.txt  camera_device.cpp  client_app.cpp  focuser_device.cpp  guider_device.cpp  rotator_device.cpp  server_main.cpp  simple_server.cpp  solver_device.cpp  switch_device.cpp  telescope_device.cpp
src/client_component/: AstroCommClientConfig.cmake.in  CMakeLists.txt
src/client_component/include/astrocomm/: client.h
src/client_component/src/: .gitkeep  client.cpp  device_client.cpp
src/common/: CMakeLists.txt  error_recovery.cpp  error_recovery.h  logger.cpp  logger.h  message.cpp  message.h  message_queue.cpp  message_queue.h  utils.cpp  utils.h
src/core/: .gitkeep  AstroCommCoreConfig.cmake.in  CMakeLists.txt  README.md
src/core/common/: .gitkeep  core.cpp  device_health.cpp  device_interface.cpp  device_lifecycle.cpp  device_plugin.cpp  discovery.cpp  enhanced_discovery.cpp  enhanced_error_recovery.cpp  error_recovery.cpp  message.cpp  message_queue.cpp  performance_metrics.cpp  utils.cpp
src/core/include/astrocomm/: core.h
src/core/include/hydrogen/: core.h
src/core/performance/: CMakeLists.txt  xmake.lua
src/core/src/: client_configuration.cpp  fifo_communicator.cpp  fifo_config_manager.cpp  fifo_logger.cpp  grpc_communicator.cpp  grpc_streaming_client.cpp  message_transformer.cpp  message_validator.cpp  mqtt_communicator.cpp  multi_protocol_communicator.cpp  protocol_communicator_factory.cpp  protocol_converters.cpp  protocol_error_mapper.cpp  stdio_communicator.cpp  stdio_config_manager.cpp  stdio_logger.cpp  tcp_communicator.cpp  unified_connection_manager.cpp  unified_device_client.cpp  unified_websocket_error_handler.cpp  websocket_error_handler.cpp  zmq_communicator.cpp  zmq_queue_client.cpp
src/core/src/configuration/: stdio_config_manager.cpp
src/core/src/connection/: protocol_connections.cpp  unified_connection_manager.cpp
src/device_component/: AstroCommDeviceConfig.cmake.in  CMakeLists.txt
src/device_component/src/: .gitkeep  device.cpp  telescope.cpp  websocket_device.cpp
src/server/examples/: CMakeLists.txt  enhanced_device_manager_example.cpp  mqtt_broker_example.cpp  reorganized_server_demo.cpp  zmq_server_example.cpp
src/server/tests/: CMakeLists.txt  test_communication_service.cpp  test_config.json  test_config_manager.cpp  test_config_repository.cpp  test_device_repository.cpp  test_error_handler.cpp  test_grpc_server.cpp  test_health_service.cpp  test_logging_manager.cpp  test_main.cpp  test_mqtt_broker.cpp  test_user_repository.cpp  test_zmq_server.cpp
src/server_component/: AstroCommServerConfig.cmake.in  CMakeLists.txt
src/server_component/src/: .gitkeep  auth_manager.cpp  device_manager.cpp  device_server.cpp  server.cpp
src_new/client/: AstroCommClientConfig.cmake.in  CMakeLists.txt  client.cpp  device_client.h
src_new/client/managers/: message_queue_manager.h  subscription_manager.h
src_new/client/processors/: command_executor.cpp  command_executor.h  message_processor.cpp  message_processor.h
src_new/server/: CMakeLists.txt
src_new/server/examples/: enhanced_device_manager_example.cpp  mqtt_broker_example.cpp
src_new/server/src/: server.cpp
src_new/server/tests/: test_communication_service.cpp  test_config_repository.cpp  test_error_handler.cpp  test_mqtt_broker.cpp
tests/: CMakeLists.txt  TEST_COVERAGE_SUMMARY.md  automatic_compatibility_test.cpp  run_stdio_tests.sh
tests/build_system/: CMakeLists.txt  test_build_integration.cpp
tests/client/: CMakeLists.txt  test_comprehensive_coverage.cpp  test_refactored_components.cpp
tests/common/: CMakeLists.txt  test_logger.cpp  test_message_queue.cpp  test_message_system.cpp  test_utilities.cpp
tests/comprehensive/: CMakeLists.txt  placeholder_test.cpp  test_unified_device_client.cpp
tests/core/: CMakeLists.txt  test_device_interface.cpp  test_enhanced_device_manager.cpp  test_error_recovery.cpp  test_message.cpp  test_message_basic.cpp  test_message_transformer.cpp  test_simple.cpp  test_stdio_communicator.cpp  test_stdio_communicator_mock.cpp  test_stdio_message_transformer.cpp  test_utils.cpp
tests/core/communication/: test_tcp_communicator.cpp
tests/core/device/: README.md  test_device_lifecycle.cpp
tests/core/performance/: test_connection_pool.cpp  test_memory_pool.cpp  test_message_batcher.cpp
tests/device/: CMakeLists.txt  test_camera_device.cpp  test_device_base.cpp  test_device_registry.cpp  test_filter_wheel_device.cpp  test_focuser_device.cpp  test_telescope_device.cpp
tests/device_component/: CMakeLists.txt  benchmark_device_performance.cpp  test_config.json.in  test_device_logger.cpp  test_performance_monitor.cpp  test_telescope.cpp  test_websocket_device.cpp
tests/fifo_communication/: CMakeLists.txt  README.md  test_fifo_communicator.cpp  test_fifo_config.cpp  test_fifo_integration.cpp  test_fifo_performance.cpp
tests/framework/: comprehensive_test_framework.cpp  comprehensive_test_framework.h  mock_objects.cpp  mock_objects.h  mock_stdio_communicator.h
tests/integration/: CMakeLists.txt  placeholder_test.cpp  test_client_integration.cpp  test_client_integration.cpp.disabled  test_multi_protocol_integration.cpp  test_stdio_integration.cpp
tests/performance/: CMakeLists.txt  placeholder_test.cpp  test_performance_benchmarks.cpp
tests/protocols/: CMakeLists.txt  placeholder_test.cpp  test_protocol_implementations.cpp
tests/python/: test_comprehensive_bindings.py
tests/server/: CMakeLists.txt  test_enhanced_device_server.cpp  test_mqtt_broker.cpp  test_stdio_server.cpp
tests/server/services/: test_device_monitoring_service.cpp
tests/stdio/: CMakeLists.txt
tests/utils/: mock_device.cpp  mock_device.h  simple_helpers.cpp  simple_helpers.h  test_helpers.cpp  test_helpers.h  test_message_factory.cpp  test_message_factory.h
(+517 files in other folders)
